--- a/views/user_signin.ejs
+++ b/views/user_signin.ejs
@@ -1,6 +1,6 @@
 <h1>SignIn</h1>
 
-<form action="users/create-session" method="post">
+<form action="/users/create-session" method="post">
     <input type="email" name="email" placeholder="Enter your email" required>
     <input type="password" name="password" placeholder="Password" required>
     <input type="submit"  value="SignIn">
