--- a/views/user_signup.ejs
+++ b/views/user_signup.ejs
@@ -1,6 +1,6 @@
 <h1>SignUp</h1>
 
-<form action="users/create" method="post">
+<form action="/users/create" method="post">
     <input type="text" name="name" placeholder="Your name" required>
     <input type="email" name="email" placeholder="Your email" required>
     <input type="password" name="password" placeholder="Your password" required>
