--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,1 +1,6 @@
 <h1>Codeial/User Profile</h1>
+<p>Name: <%= user.name %> </p>
+<p>Name: <%= user.email %> </p>
+<a href="/users/sign-out">
+    SignOut
+</a>
