populate posts and authenticating posts

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,22 @@
     <link rel="stylesheet" href="/css/home.css">
     <h1>Codeial</h1>
    
+    <section id="feed-posts">
+        <h4>Posts</h4>
+        <% if(locals.user){ %>
+            <form action="/posts/create" id="new-post-form" method="post" >
+                <textarea name="content" id="" placeholder="Type Here..." cols="30" rows="10"></textarea>
+                <input type="submit" value="Post">    
+            </form>
+        <% } %>
+        <div id="posts-list-container">
+            <ul>
+                <% for(let post of posts){ %>
+                    <li>
+                        <%= post.content %>
+                        <%= post.user.name %>
+                    </li>
+                <% } %>
+            </ul>
+        </div>
+    </section>
