--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,8 +15,31 @@
                     <li>
                         <%= post.content %>
                         <%= post.user.name %>
+                        <div class="posts-comments">
+                            <% if(locals.user){ %>
+                                <form action="/comments/create" method="post">
+                                    <input type="text" name="content" placeholder="comments">
+                                    <input type="hidden" name="post" value="<%=post._id%>">
+                                    <input type="submit" name="" id="" value="Add Comment" >
+                                </form>
+                            <% } %>
+                        </div>
                     </li>
+                    <div class="post-comments-list">
+                        <ul id="post-comments-<%= post._id %>">
+                            <% for(comment of post.comments){ %>
+                                <p>
+                                    <%=comment.content%>
+                                    <small>
+                                        <%= comment.user.name %>
+                                    </small>
+                                </p>
+                            <% } %>
+                        </ul>
+                    </div>
+
                 <% } %>
+                
             </ul>
         </div>
     </section>
