--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,10 +43,21 @@
                         <ul id="post-comments-<%= post._id %>">
                             <% for(comment of post.comments){ %>
                                 <p>
-                                    <%=comment.content%>
-                                    <small>
-                                        <!-- <%= comment %> -->
-                                    </small>
+                                    <!-- <% if(locals.user && locals.user.id == post.user.id){ %>
+                                <small>
+                                   <a href="/posts/destroy/<%= post.id %>" >Delete</a>
+                                </small>
+                                <% } %> -->
+                                <% if (locals.user ){ %>
+                                
+                                <small>
+                                   <a href="/comments/destroy/<%= comment.id %>">X</a>
+                                </small>
+                                <% } %>
+                                   <%=comment.content%>
+                                   <small>
+                                       <!-- <%= comment %> -->
+                                   </small>
                                 </p>
                             <% } %>
                         </ul>
@@ -56,4 +67,12 @@
                 
             </ul>
         </div>
+    </section>
+    <section id="user-friends">
+        <h4>Friends</h4>
+        <% for(u of all_users){ %>
+            <p>
+                <a href="/users/profile/<%=u.id %>"> <%= u.name %> </a>
+            </p>
+        <% } %>
     </section>
