--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,3 +1,12 @@
 <h1>Codeial/User Profile</h1>
-<p> <%= user.name %> </p>
-<p> <%= user.email %> </p>
+
+
+<% if(user.id == profile_user.id){ %>
+    <form action="/users/update/<%=profile_user.id%>" method="post">
+        <input type="text" name="name" value="<%=profile_user.name%>" id="" required>
+        <input type="text" name="email" value="<%=profile_user.email%>" id="" required>
+        <input type="submit" value="Update">
+    </form>
+<% } %>
+    <p> <%= profile_user.name %> </p>
+    <p> <%= profile_user.email %> </p>
