Added some style to home page

--- a/assests/css/home.css
+++ b/assests/css/home.css
@@ -1,3 +1,19 @@
 body {
   background-color: lightblue;
 }
+
+#home-container {
+  display: flex;
+}
+
+#home-container #feed-posts {
+  width: 70%;
+  padding: 0.8rem;
+}
+
+#home-container #user-friends {
+  width: 30%;
+  padding: 0.8rem;
+  border-left: 1px solid blue;
+  height: 100vh;
+}
