--- a/assests/scss/home.scss
+++ b/assests/scss/home.scss
@@ -1,3 +1,17 @@
 body{
     background-color: lightblue;
 }
+
+#home-container{
+    display: flex;
+    #feed-posts{
+        width: 70%;
+        padding: 0.8rem;
+    }
+    #user-friends{
+        width: 30%;
+        padding: 0.8rem;
+        border-left: 1px solid blue;
+        height: 100vh;
+    }
+}
