--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,78 +1,79 @@
     <link rel="stylesheet" href="/css/home.css">
     <h1>Codeial</h1>
    
-    <section id="feed-posts">
-        <h4>Posts</h4>
-        <% if(locals.user){ %>
-            <form action="/posts/create" id="new-post-form" method="post" >
-                <textarea name="content" id="" placeholder="Type Here..." cols="30" rows="10"></textarea>
-                <input type="submit" value="Post">    
-            </form>
-        <% } %>
-        <div id="posts-list-container">
-            <ul>
-                <% for(let post of posts){ %>
-                    <li>
-                        <p>
-                            <!-- <% if(locals.user && locals.user.id == post.user.id){ %>
-                                <small>
-                                    <a href="/posts/destroy/<%= post.id %>" >Delete</a>
-                                </small>
-                            <% } %> -->
-                            <% if (locals.user ){ %>
-                                
-                                <small>
-                                    <a href="/posts/destroy/<%= post.id %>">X</a>
-                                </small>
-                            <% } %>
-                            <!-- <a href="/posts/destroy/<%= post.id %>" >Delete</a>                             -->
-                            <%= post.content %>
-                            <%= post.user.name %>
-                        </p>
-                        <div class="posts-comments">
-                            <% if(locals.user){ %>
-                                <form action="/comments/create" method="post">
-                                    <input type="text" name="content" placeholder="comments">
-                                    <input type="hidden" name="post" value="<%=post._id%>">
-                                    <input type="submit" name="" id="" value="Add Comment" >
-                                </form>
-                            <% } %>
-                        </div>
-                    </li>
-                    <div class="post-comments-list">
-                        <ul id="post-comments-<%= post._id %>">
-                            <% for(comment of post.comments){ %>
-                                <p>
-                                    <!-- <% if(locals.user && locals.user.id == post.user.id){ %>
-                                <small>
-                                   <a href="/posts/destroy/<%= post.id %>" >Delete</a>
-                                </small>
+    <div id="home-container">
+        <section id="feed-posts">
+            <h4>Posts</h4>
+            <% if(locals.user){ %>
+                <form action="/posts/create" id="new-post-form" method="post" >
+                    <textarea name="content" id="" placeholder="Type Here..." cols="30" rows="10"></textarea>
+                    <input type="submit" value="Post">
+                </form>
+            <% } %>
+            <div id="posts-list-container">
+                <ul>
+                    <% for(let post of posts){ %>
+                        <li>
+                            <p>
+                                <!-- <% if(locals.user && locals.user.id == post.user.id){ %>
+                                    <small>
+                                        <a href="/posts/destroy/<%= post.id %>" >Delete</a>
+                                    </small>
                                 <% } %> -->
                                 <% if (locals.user ){ %>
-                                
-                                <small>
-                                   <a href="/comments/destroy/<%= comment.id %>">X</a>
-                                </small>
+        
+                                    <small>
+                                        <a href="/posts/destroy/<%= post.id %>">X</a>
+                                    </small>
                                 <% } %>
-                                   <%=comment.content%>
-                                   <small>
-                                       <!-- <%= comment %> -->
-                                   </small>
-                                </p>
-                            <% } %>
-                        </ul>
-                    </div>
-
-                <% } %>
-                
-            </ul>
-        </div>
-    </section>
-    <section id="user-friends">
-        <h4>Friends</h4>
-        <% for(u of all_users){ %>
-            <p>
-                <a href="/users/profile/<%=u.id %>"> <%= u.name %> </a>
-            </p>
-        <% } %>
-    </section>
+                                <!-- <a href="/posts/destroy/<%= post.id %>" >Delete</a>                             -->
+                                <%= post.content %>
+                                <%= post.user.name %>
+                            </p>
+                            <div class="posts-comments">
+                                <% if(locals.user){ %>
+                                    <form action="/comments/create" method="post">
+                                        <input type="text" name="content" placeholder="comments">
+                                        <input type="hidden" name="post" value="<%=post._id%>">
+                                        <input type="submit" name="" id="" value="Add Comment" >
+                                    </form>
+                                <% } %>
+                            </div>
+                        </li>
+                        <div class="post-comments-list">
+                            <ul id="post-comments-<%= post._id %>">
+                                <% for(comment of post.comments){ %>
+                                    <p>
+                                        <!-- <% if(locals.user && locals.user.id == post.user.id){ %>
+                                    <small>
+                                       <a href="/posts/destroy/<%= post.id %>" >Delete</a>
+                                    </small>
+                                    <% } %> -->
+                                    <% if (locals.user ){ %>
+        
+                                    <small>
+                                       <a href="/comments/destroy/<%= comment.id %>">X</a>
+                                    </small>
+                                    <% } %>
+                                       <%=comment.content%>
+                                       <small>
+                                           <!-- <%= comment %> -->
+                                       </small>
+                                    </p>
+                                <% } %>
+                            </ul>
+                        </div>
+                    <% } %>
+        
+                </ul>
+            </div>
+        </section>
+        <section id="user-friends">
+            <h4>Friends</h4>
+            <% for(u of all_users){ %>
+                <p>
+                    <a href="/users/profile/<%=u.id %>"> <%= u.name %> </a>
+                </p>
+            <% } %>
+        </section>
+    </div>
