--- a/views/user_signin.ejs
+++ b/views/user_signin.ejs
@@ -5,3 +5,7 @@
     <input type="password" name="password" placeholder="Password" required>
     <input type="submit"  value="SignIn">
 </form>
+
+<p>
+    <a href="/users/auth/google">Google SignIn/SignUp</a>
+</p>
