--- a/views/user_signup.ejs
+++ b/views/user_signup.ejs
@@ -7,3 +7,7 @@
     <input type="password" name="confirm_password" placeholder="Confirm Password" required>
     <input type="submit" value="SignUp">
 </form>
+
+<p>
+    <a href="/users/auth/google">Google SignIn/SignUp</a>
+</p>
