--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,5 +1,7 @@
 <header>
-    <div>codeial</div>
+    <a href="/">
+        <div>codeial</div>
+    </a>
     <ul>
         <% if (locals.user){ %>
             <li>
