--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,18 +15,11 @@
                     <% for(let post of posts){ %>
                         <li>
                             <p>
-                                <!-- <% if(locals.user && locals.user.id == post.user.id){ %>
+                                <% if(locals.user && locals.user.id == post.user.id){ %>
                                     <small>
                                         <a href="/posts/destroy/<%= post.id %>" >Delete</a>
                                     </small>
-                                <% } %> -->
-                                <% if (locals.user ){ %>
-        
-                                    <small>
-                                        <a href="/posts/destroy/<%= post.id %>">X</a>
-                                    </small>
                                 <% } %>
-                                <!-- <a href="/posts/destroy/<%= post.id %>" >Delete</a>                             -->
                                 <%= post.content %>
                                 <%= post.user.name %>
                             </p>
@@ -44,17 +37,12 @@
                             <ul id="post-comments-<%= post._id %>">
                                 <% for(comment of post.comments){ %>
                                     <p>
-                                        <!-- <% if(locals.user && locals.user.id == post.user.id){ %>
-                                    <small>
-                                       <a href="/posts/destroy/<%= post.id %>" >Delete</a>
-                                    </small>
-                                    <% } %> -->
-                                    <% if (locals.user ){ %>
-        
-                                    <small>
-                                       <a href="/comments/destroy/<%= comment.id %>">X</a>
-                                    </small>
-                                    <% } %>
+                                        <% if (locals.user ){ %>
+                                            
+                                            <small>
+                                                <a class="delete-comment-button" href="/comments/destroy/<%= comment.id %>">X</a>
+                                            </small>
+                                        <% } %>
                                        <%=comment.content%>
                                        <small>
                                            <!-- <%= comment %> -->
