--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,17 @@
                                     </small>
                                 <% } %>
                                 <%= post.content %>
-                                <%= post.user.name %>
+                                <%= post.user.name %> <br>
+                                <small>
+                                    <% if (locals.user){ %>
+                                        <a class="toggle-like-button" data-likes="<%= post.likes.length %>" href="/likes/toggle/?id=<%=post._id%>&type=Post">
+                                                <%= post.likes.length %> Likes
+                                        </a>
+                                        
+                                    <% }else{ %>
+                                        <%= post.likes.length %> Likes
+                                    <% } %>
+                                </small>
                             </p>
                             <div class="posts-comments">
                                 <% if(locals.user){ %>
@@ -64,4 +74,12 @@
                 </p>
             <% } %>
         </section>
+        <script src="js/toggle_likes.js"></script>
+<script>
+    $('.toggle-like-button').each(function(){
+        let self = this;
+        let toggleLike = new ToggleLike(self);
+    });
+</script>
+
     </div>
