--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,5 @@
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/chat_box.css">
     <h1>Codeial</h1>
    
     <div id="home-container">
@@ -74,6 +75,31 @@
                 </p>
             <% } %>
         </section>
+
+        <!--Chat Box-->
+        <% if (locals.user){ %>
+            <div id="user-chat-box">
+                <ul id="chat-messages-list">
+                    <li class="other-message">
+                        <span>Other Message</span>
+                    </li>
+                    <li class="self-message">
+                        <span>
+                            Self Message
+                        </span>
+                        
+                    </li>
+        
+                </ul>
+                <div id="chat-message-input-container">
+                    <input id="chat-message-input" placeholder="Type message here">
+                    <button id="send-message">Send</button>
+                </div>
+        
+            </div>
+        <% } %>
+        
+
         <script src="js/toggle_likes.js"></script>
 <script>
     $('.toggle-like-button').each(function(){
